--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "nwb build-react-component",
+    "clean": "nwb clean-module && nwb clean-demo",
+    "release": "standard-version"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +48,7 @@
     "@storybook/addon-links": "^6.3.7",
     "@storybook/addon-notes": "^5.3.21",
     "@storybook/react": "^6.3.7",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "nwb": "0.24.x"
   }
 }
